<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 新建文件夹：只在【已进入某台服务器】时可见（见 MainActivity.onPrepareOptionsMenu）。
         根目录列的是服务器本身，那一层没有"文件夹"可新建。 -->
    <item
        android:id="@+id/menu_new_folder"
        android:title="@string/menu_new_folder"
        android:icon="@drawable/ic_new_folder"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_manage_servers"
        android:title="@string/menu_manage_servers"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_locate_current"
        android:title="@string/menu_locate_current"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/menu_clear_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log_endpoint"
        android:title="设置上报端点"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log_token"
        android:title="设置上报令牌"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_upload_log"
        android:title="上报日志"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
